syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

message UserResponse {
  string user_id = 1;
  string full_name = 2;
  string username = 3;
  string email = 4;
  string role = 5;
  google.protobuf.Timestamp created_at = 6;
}

message CreateUserRequest {
  string full_name = 1;
  string username = 2;
  string email = 3;
  string password = 4;
  string user_agent = 5;
}

message CreateUserResponse {
  UserResponse user = 1;
  string access_token = 2;
}

message LoginUserRequest {
  string credential = 1;
  string password = 2;
}

message LoginUserResponse {
  UserResponse user = 1;
  string access_token = 2;
}

message GetUserRequest {}
